Alle opdrachten toegevoegd

--- a/index-opdr4.html
+++ b/index-opdr4.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="css/style-opdr4.css">
+        <title>Opdracht 1</title>
     </head>
     <body>
         <header>
-
+            <nav>
+                
+            </nav>
         </header>
         <main>
 
         </main>
-        <footer>   
+        <footer>
             
         </footer>
     </body>
